2008-01-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfromFolder:_folderfrom:_startDateto:_endDatetitle:titlecomponent:_component]):
	change the algorithm a little bit to compare the roles of the
	current users to see if he is an "owner" instead of solely
	checking its login name. This enables the users listed as
	"SuperUsers" to be considered as owners and see everything as
	expected.

2008-01-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoFolder+CardDAV.m ([SOGoFolder
	-davAddressbookQuery:queryContext]): when empty values are fed to
	SOGo, their dictionary should be explicitly set to nil.

2008-01-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoCache.m ([SOGoCache
	-registerObject:objectwithName:nameinContainer:container]):
	register the object and its parents too.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	+userWithLogin:newLoginroles:newRoles]): try to retrieve the
	specified user from the SOGoCache.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-lookupName:lookupNameinContext:localContextacquire:acquire]): try
	to retrieve the object specified from the cache and returns it if
	it exists.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupName:inContext:acquire:]): cache
	the result in the SOGoCache.

	* Main/SOGo.m ([SOGo -dispatchRequest:_request]): initialize and
	kill the shared cache before and after the connection processing.

	* SoObjects/SOGo/SOGoCache.[hm]: new cache module implementing a
	per-connection cache mechanism.

2008-01-16  Ludovic Marcotte <ludovic@inverse.ca>
	
	* Minor adjustments / bug fixes to previous commit.

2008-01-14  Ludovic Marcotte <ludovic@inverse.ca>

	* Added files related to the custom recurrence
	  editor of the SOGo Web interface. The CSS
	  needs to be done correctly.

	* Fixed a bug in the daily recurrence generator.