@@ -1,3 +1,10 @@
+2008-01-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
+	-pathToAttachment]): in the case where the client object is not a
+	mail body part (when the message IS the attachment), we append 0
+	to generate the url, instead of the filename.
+
 2008-01-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/Appointments/SOGoAppointmentFolder.m
